networks.tf
# Create a VPC
resource "aws_vpc" "vpc_net" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "vpc_net"
  }
}

#Create Subnetworks
resource "aws_subnet" "subnet_public" {
  vpc_id     = aws_vpc.vpc_net.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "subnet_vpc_terraform_ec2"
  }
}

#Create Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc_net.id

  tags = {
    Name = "internet_gateway_vpc_net"
  }
}


#Add Internet Gateway in Default Route Table
resource "aws_default_route_table" "drt" {
  default_route_table_id = aws_vpc.vpc_net.default_route_table_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "route_table_default"
  }
}
